# tau-lambda-index

./: .gitignore  CMakeLists.txt  README.md
exp/: collect_mask_ratio_and_repetition_measures.sh  collect_query_time.sh  collect_serialized_space.sh  gen_idx.sh  gen_mf_and_pattern.sh  locate.sh
exp/dataset/: dblp  dna_pseudoreal  dna_real  english  influenza
include/: tau_lambda_index.h
src/: gen_index.cc  locate.cc
